# spectrogram-annotation

./: .gitignore  main.py  pyproject.toml
app/: cqt_settings_dialog.py  main_window.py  spectrogram_widget.py
spec_annotate/: cqt_settings_dialog.py  main_window.py  spectrogram_widget.py  synth.py
spec_annotate/utils/: cqt.py  midi.py
utils/: cqt.py  midi.py
