[project]
name = "spectrogram-annotation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "mido>=1.3.3",
    "pretty-midi>=0.2.11",
    "pyside6>=6.10.1",
    "matplotlib>=3.7",
]

[project.scripts]
spectrogram-annotation = "app.main:main"
