[project]
name = "specannotate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "soundfile>=0.12",
    "mido>=1.3.3",
    "pretty-midi>=0.2.11",
    "pyside6>=6.10.1",
    "matplotlib>=3.7",
    "sounddevice>=0.5.3",
]

[project.scripts]
specannotate = "main:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.4",
    "pyinstaller-hooks-contrib>=2024.8",
]
